--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <div class="box">First Div</div>
     <div class="box">second Div</div>
     <div class="box"> Third div</div>
+    <div class="box">First Div</div>
+    <div class="box">second Div</div>
+    <div class="box"> Third div</div>
+
+    <script src="script.js"></script>
 </body>
 </html>
